# fastapi-socketio-example

backend/: app.py  asgi.py  config.py  pyproject.toml
backend/api/: __init__.py
backend/api/routes/: __init__.py  hello_world.py
backend/api/sockets/: __init__.py  index.py
frontend/: package.json
frontend/src/: App.js  ChatScreen.js  index.css
frontend/src/components/: MessageList.js  SendMessageForm.js  TypingIndicator.js  UsernameForm.js  WhosOnlineList.js
