[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giang Ta <thoanggiang98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
python-socketio = "^5.0.4"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
